syntax = "proto3";

option php_namespace = "App\\Protobuff";
option php_metadata_namespace = "App\\GPBMetadata";

import "timePb.proto";
import "paymentPb.proto";
import "summaryPb.proto";
import "buyPb.proto";

message OrderedListPb{
    string parentOrderId = 4;
    TimePb time = 5;
    PaymentPbRef paymentRef = 6;
    DeliveryStatusEnum deliveryStatus = 7;
}

message OrderedListSearchReqPb {
    string orderParentId = 1;
    string customerId = 2;
}

message OrderedListSearchRespPb {
    SummaryPb summary = 1;
    repeated OrderedListPb orderListresults =2;
    repeated BuyPb buyListresults = 3;
}


